# liza_codex_pdf

./: README.md  backup.sh  pyproject.toml
src/liza_codex_pdf/: __init__.py  app.py  backup.py  web.py
src/liza_codex_pdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_app.py  test_backup.py  test_web.py
