[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liza_codex_pdf"
version = "0.1.0"
description = "CLI scaffold"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
liza-codex-pdf = "liza_codex_pdf.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
